# paradox-altv-voiceplugin

./: CMakeLists.txt  VersionResource.rc
include/: CSingleton.h
src/: functions.cpp  functions.hpp  injector.cpp  injector.hpp  main.cpp  main.hpp  websocket.cpp  websocket.hpp
